# social-media-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 6a58909f4c44_created_all_tables.py  f65d26cce03f_create_votes_table.py
app/: database.py  main.py  models.py  schemas.py  utils.py
app/routers/: posts.py  votes.py
src/: config.py  main.py  models.py  oauth2.py  schemas.py  utils.py
src/database/: __init__.py  mongo.py  postgres.py
src/message_queue/: __init__.py
src/routers/: auth.py  posts.py  users.py  videos.py  votes.py
src/schemas/: posts.py  tokens.py  videos.py  votes.py
tests/: conftest.py  constants.py  test_posts.py  test_users.py
